--- a/www/index.html
+++ b/www/index.html
@@ -1187,7 +1187,7 @@
 
 
 <div id="awards" class="over">
-    <div class="keyBox"><p>awards</p></div>
+    <div class="overBox">awards</div>
     <p>It is noteworthy that every single year starting from 2010 Ameriabank was recognised as the best bank of the year
         either by Euromoney Award for Excellence (2011, 2012, 2014) or The Banker magazine by the Financial Times Group
         (2010, 2013). Since 2012 for four consecutive years Ameriabank has received awards in several key nominations by
