--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,8 @@
     <header>
         <div id="center">
             <a href="http://www.ameriabank.am" class="logo">
-                <img width="100%" src="images/logo.png">
+                <img id="standartLogo" width="100%" src="images/logo.png">
+				<img id="phoneLogo" width="40%" src="images/A-logo_small.png">
             </a>
 
             <div class="menu-btn">&#9776; Content</div>
@@ -340,9 +341,9 @@
                 <td class="overviewLogoBoxColumn2">
                     <a class="ameriagrouplogo" href="http://www.ameriabank.am/"><img src="images/ameriabank.png"
                                                                                      width="50%" align="left"></a>
-                    <a class="ameriagrouplogo" href="http://www.ameria.am/"><img src="images/ameriaassetmanagement.png"
+                    <a class="ameriagrouplogo" href="http://ameriaassetmanagement.am/"><img src="images/ameriaassetmanagement.png"
                                                                                  width="50%" align="left"></a>
-                    <a class="ameriagrouplogo" href="http://ameriaassetmanagement.am/"><img
+                    <a class="ameriagrouplogo" href="http://www.ameria.am/"><img
                             src="images/ameriadvisory.png" width="50%" align="left"></a>
                     <a class="ameriagrouplogo last" href="http://www.amerialegal.am/"><img src="images/amerialegal.png"
                                                                                            width="50%" align="left"></a>
@@ -1905,7 +1906,7 @@
 
             <p><a class="italic">Member of the Management Board, Trading Director</a></p><br>
 
-            <p>OMr. Babayan was appointed Acting Member of the Management Board (November 2013 - December 2013), then
+            <p>Mr. Babayan was appointed Acting Member of the Management Board (November 2013 - December 2013), then
                 Member of the Management Board-Trading Director serving in such capacity since December 2013.</p>
 
             <p>Mr. Babayan started his professional career in banking in 1999 at “Armimpexbank” CJSC (currently
