--- a/www/index.html
+++ b/www/index.html
@@ -23,9 +23,7 @@
         <div id="center">
             <a href="http://www.ameriabank.am" class="logo">
                 <img id="standartLogo" width="100%" src="images/logo.png">
-				<img id="phoneLogo" width="40%" src="images/A-logo_small.png">
-            </a>
-
+			<img id="phoneLogo" width="40%" src="images/A-logo_small.png"></a>
             <div class="menu-btn">&#9776; Content</div>
         </div>
     </header>
